namespace MikeyaWarehouse.Domain.Common.ValueObjects;

public record LoadCapacity(int Id,
    double MaxWeight,
    double MaxVolume);
